# tournoi-app

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  Makefile  PLAN_MOBILE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  railway.json  render.yaml
backend/: .coverage  .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt  start.sh
backend/apps/accounts/: admin.py  authentication.py  models.py  permissions.py  serializers.py  tests.py  tokens.py  urls.py  views.py
backend/apps/clubs/: admin.py  apps.py  fff_search.py  history.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/: __init__.py  consumers.py  debug.py  events.py  health.py  permissions.py  routing.py
backend/apps/matches/: admin.py  apps.py  models.py  postpone.py  serializers.py  tests.py  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  models.py  push.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/public/: apps.py  tests.py  urls.py  views.py
backend/apps/realtime/: apps.py  broadcasters.py  consumers.py  middleware.py  mixins.py  routing.py  signals.py
backend/apps/scheduling/: admin.py  bracket_resolver.py  context.py  engine.py  enumerator.py  generate.py  models.py  optimizer.py  scoring.py  serializers.py  slots.py  tasks.py  types.py  urls.py  views.py
backend/apps/standings/: apps.py  models.py  services.py  tests.py  urls.py  views.py
backend/apps/subscriptions/: admin.py  apps.py  models.py  plans.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/teams/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/tournaments/: admin.py  apps.py  insights.py  models.py  serializers.py  tests.py  tests_insights.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py
backend/kickoff/: asgi.py  celery.py  urls.py  wsgi.py
backend/kickoff/settings/: base.py  dev.py  (+1 more)
backend/scripts/: load_test_ws.py  ws_demo.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_e2e_business_flows.py  test_e2e_comprehensive.py  test_groups_api.py  test_models.py  test_scheduling_generate.py  test_security.py  test_teams_api.py  test_tournaments_api.py
(+226 files in other folders)
